--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,15 @@
 <resources>
-    <string name="app_name">oops</string>
+    <string name="app_name">Groceries</string>
     <string name="facebook_app_id">2867359826810328</string>
     <string name="fb_login_protocol_scheme">fb2867359826810328</string>
 
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar"></style>
+
+    <string name="country_prompt">Choose a country</string>
+    <string-array name="country_arrays">
+        <item>Customer</item>
+        <item>Retailer</item>
+        <item>Wholesaler</item>
+    </string-array>
+
 </resources>
