forgot_pass_done_ig

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
 
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar"></style>
 
-    <string name="country_prompt">Choose a country</string>
+    <string name="country_prompt">Choose the type of user </string>
     <string-array name="country_arrays">
         <item>Customer</item>
         <item>Retailer</item>
