--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Groceries</string>
+    <string name="app_name">Krazy Kart</string>
     <string name="facebook_app_id">2867359826810328</string>
     <string name="fb_login_protocol_scheme">fb2867359826810328</string>
 
